--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
               <div class="col-sm">
                 <h2 style="margin-top: 30px;">
-                  storybooks
+                  blog
                 </h2>
               </div>
             </div>
@@ -38,8 +38,8 @@
       <div class="card-body">
         <h5 class="card-title">ft-4</h5>
         <h6 class="card-subtitle mb-2 text-muted">#dc777b8c8013</h6>
-        <h6 class="card-subtitle mb-2 text-muted">8/30/2020, 1:22:43 AM</h6>
-        <a href="/saulo.dev/storybooks/ft-4-dc777b" class="card-link">App</a>
+        <h6 class="card-subtitle mb-2 text-muted">8/30/2020, 1:23:12 AM</h6>
+        <a href="/saulo.dev/blog/ft-4-dc777b" class="card-link">App</a>
         <a href="https://github.com/Sauloxd/saulo.dev/pull/8" class="card-link">Pull Request</a>
       </div>
     </div>
